--- a/css/style.css
+++ b/css/style.css
@@ -31,3 +31,29 @@ body{
     font-size: 14px;
     background-color: var(--cinza);
 }
+
+
+@media screen and (min-width: 1280px){
+    body{
+        width: 1260px;
+        margin: 0 auto;
+        display: grid;
+        grid-template-areas: 
+        "header header" 
+        "nav-menu main"
+        "footer footer";
+    }
+
+    .header{
+        grid-area: header;
+    }
+    .nav-menu{
+        grid-area:nav-menu ;
+    }
+    .main{
+        grid-area: main;
+    }
+    .footer{
+        grid-area: footer;
+    }
+}
