--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
 @import url("cardChart.css");
 @import url("cardLista.css");
 @import url("footer.css");
+@import url("perfil.css");
+@import url("formulario-principal.css");
 
 
 
@@ -26,12 +28,21 @@
     --rosa-escuro: #f1396d;
     
 }
+html{
+   
+}
 
  body{
    
     font-family: var(--fonte-principal);
     font-size: 14px;
     background-color: var(--cinza);
+    height: 100%;
+    
+    
+}
+main{
+    min-height: calc(100vh - 50px - 50px  );
 }
 
 
@@ -44,16 +55,22 @@
         "header header" 
         "nav-menu main"
         "footer footer";
+        grid-template-columns: auto 1fr;
+      
+       
     }
 
     .header{
         grid-area: header;
+        
     }
     .nav-menu{
         grid-area:nav-menu ;
     }
     .main{
         grid-area: main;
+        
+        
     }
     .footer{
         grid-area: footer;
