--- a/css/formulario-principal.css
+++ b/css/formulario-principal.css
@@ -82,4 +82,14 @@
     .container__button{
         grid-column: 3/4;
     }
+    .campo__escrita:focus{
+        outline: none;
+        border-bottom: 2px solid var(--rosa-escuro);
+        font-size: 16px;
+        left: 0px;
+        background-color: var(--branco);
+        transition: 0.5s;
+        border-radius: 10px;
+    }
+    
 }
