--- a/css/formulario-principal.css
+++ b/css/formulario-principal.css
@@ -72,21 +72,21 @@ a:link{
         display: grid;
         grid-template-columns: repeat(3 , auto) ;
     }
-    .formulario__campo:nth-child(1){
+    .position-user:nth-child(1){
 
         grid-column: 1/4;
     }
 
-    .formulario__campo:nth-child(2){
+    .position-user:nth-child(2){
 
         grid-column: 1/4;
     }
-    .formulario__campo:nth-child(4){
+    .position-user:nth-child(4){
 
         grid-column: 2/4;
     }
 
-    .container__button{
+    .position-user:nth-child(8){
         grid-column: 3/4;
     }
     .campo__escrita:focus{
