--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@
 @import url("footer.css");
 @import url("perfil.css");
 @import url("formulario-principal.css");
+@import url("despesas.css");
+@import url("icon.css");
 
 
 
