--- a/css/formulario-principal.css
+++ b/css/formulario-principal.css
@@ -15,8 +15,13 @@ a:link{
     font-weight: 700;
   
 }
+.campo__etiqueta-checkBox{
+   display: flex;
+   align-items: center;
+   font-weight: 700;
+}
 
-.campo__escrita{
+.campo__escrita, .campo__escrita-select{
     padding: .5rem;
     margin: .3em;
     border: none;
@@ -34,6 +39,11 @@ a:link{
     background-color: var(--branco);
     transition: 0.5s;
     border-radius: 10px;
+}
+
+.conteiner__group{
+    display: flex;
+    column-gap: 1em;
 }
 
 .container__button{
@@ -66,12 +76,15 @@ a:link{
 
 @media screen and (min-width: 1280px){
 
+    /* ====  pagina addusuario.html===*/
 
-    .fomulario__principal{
+    .user_form{
         margin: 1rem 10%;
         display: grid;
         grid-template-columns: repeat(3 , auto) ;
     }
+
+
     .position-user:nth-child(1){
 
         grid-column: 1/4;
@@ -89,6 +102,78 @@ a:link{
     .position-user:nth-child(8){
         grid-column: 3/4;
     }
+
+
+      /* ====  pagina adddespesa.html===*/
+
+     .despesa-form{
+        display: grid;
+        margin: 1rem 10%;
+      
+        grid-template-columns: repeat(4, auto) ;
+    }
+
+    
+    .position-despesas:nth-child(1){
+        grid-column: 1/5;
+    }
+
+    .position-despesas:nth-child(6){
+        grid-column:  3/5;
+    }
+
+
+
+  /* ====  pagina addrenda.html===*/
+
+
+     .renda_form{
+        display: grid;
+        margin: 1rem 10%;
+        
+        grid-template-columns: auto auto auto;
+    }
+
+
+
+    .position-renda:nth-child(1){
+        grid-column: 1/3;
+    
+    }
+
+    .position-renda:nth-child(2){
+        grid-column: 1/2;
+    }
+
+    .position-renda:nth-child(3){
+        grid-column: 1/2;
+        grid-row: 3/4;
+    }
+
+    .position-renda:nth-child(4){
+        
+        grid-column: 3/4;
+        grid-row: 2/3;
+    }
+
+    .position-renda:nth-child(5){
+      
+        grid-column: 2/3;
+        grid-row: 2/3;
+    }
+
+  
+    .position-renda:nth-child(6){
+        grid-column: 2/3;
+        grid-row: 3/4;
+        
+    }
+    .position-renda:nth-child(7){
+        grid-column: 3/4;
+        grid-row: 4/5;
+    }
+
+
     .campo__escrita:focus{
         outline: none;
         border-bottom: 2px solid var(--rosa-escuro);
