--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@
 @import url("formulario-principal.css");
 @import url("despesas.css");
 @import url("icon.css");
+@import url("button.css");
+@import url("listaGrid.css");
 
 
 
