--- a/css/formulario-principal.css
+++ b/css/formulario-principal.css
@@ -66,6 +66,32 @@ a:link{
     border-radius: 10px;
     text-align: center;
 }
+.renda_form{
+    display: flex;
+    flex-direction: column;
+}
+
+.position-renda:nth-child(1){
+    order: 1;
+}
+.position-renda:nth-child(2){
+    order: 2;
+}
+.position-renda:nth-child(3){
+    order: 5;
+}
+.position-renda:nth-child(4){
+    order: 4;
+}
+.position-renda:nth-child(5){
+    order: 3;
+}
+.position-renda:nth-child(6){
+    order: 6;
+}
+.position-renda:nth-child(7){
+    order: 7;
+}
 
 @media screen and (min-width: 820px) {
 
